--- a/public/404.html
+++ b/public/404.html
@@ -63,5 +63,8 @@
     </div>
     <p>If you are the application owner check the logs for more information.</p>
   </div>
+  <div>
+    <a href="/">Go Back Home</a>
+  </div>
 </body>
 </html>
